<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SceneExample</string>
    <string name="action_settings">Settings</string>
    
    <string name="label_title">Title</string>
    <string name="label_name">Name</string>
    <string name="label_link">Link</string>
    <string name="label_comment">Comment</string>
    <string name="label_phone">Phone</string>
    <string name="label_email">Email</string>
    <string name="label_web">Web</string>
    <string name="label_datetime">Date &amp; Time</string>
    <string name="label_location">Location</string>
    
    
    <string name="description_ferris">Ferris Wheel</string>
    <string name="description_profile">Profile Photo</string>

</resources>
