<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android" >

    <LinearLayout
        android:id="@+id/choice_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/link_icon"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:scaleType="fitCenter"
            android:layout_weight="1"
            android:src="@drawable/ic_action_web_site"
            android:onClick="showWebSiteForm" />


        <ImageView
            android:id="@+id/image_icon"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:scaleType="fitCenter"
            android:layout_weight="1"
            android:src="@drawable/ic_action_picture"
            android:onClick="showPictureForm" />


        <ImageView
            android:id="@+id/contact_icon"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:scaleType="fitCenter"
            android:layout_weight="1"
            android:src="@drawable/action_person_selected" />


        <ImageView
            android:id="@+id/event_icon"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:scaleType="fitCenter"
            android:layout_weight="1"
            android:src="@drawable/ic_action_event"
            android:onClick="showEventForm" />
    </LinearLayout>

    <View
        android:id="@+id/top_divider"
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:layout_below="@+id/choice_bar"
        android:layout_margin="8dp"
        android:background="@color/light_gray" />

    <TextView
        android:id="@+id/header_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/top_divider"
        android:layout_margin="8dp"
        android:labelFor="@+id/header"
        android:text="@string/label_name"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/header_label"
        android:layout_alignParentRight="true"
        android:layout_margin="8dp"
        android:layout_toRightOf="@id/header_label"
        android:inputType="text"
        android:textSize="24sp" >

        <requestFocus />
    </EditText>

    <ImageView android:id="@+id/picture"
        android:src="@drawable/ferriswheel"
        android:contentDescription="@string/description_ferris"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/header_label"
        android:layout_margin="8dp"
        android:scaleType="centerCrop" />
    
      <TextView
        android:id="@+id/phone_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/header_label"
        android:layout_toRightOf="@id/picture"
        android:layout_alignParentRight="true"
        android:gravity="left"
        android:layout_margin="8dp"
        android:labelFor="@+id/phone"
        android:text="@string/label_phone"
        android:textSize="18sp" />
      
    <EditText
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone_label"
        android:layout_toRightOf="@id/picture"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:inputType="phone"
        android:textSize="18sp" />
    
    <TextView
        android:id="@+id/email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/picture"
        android:gravity="left"
        android:layout_margin="8dp"
        android:labelFor="@+id/email"
        android:text="@string/label_email"
        android:textSize="18sp" />
      
    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@id/email_label"
        android:layout_below="@id/picture"
        android:layout_margin="8dp"
        android:inputType="textEmailAddress"
        android:textSize="18sp" />
    <TextView
        android:id="@+id/web_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/email_label"
        android:gravity="left"
        android:layout_margin="8dp"
        android:labelFor="@+id/web"
        android:text="@string/label_web"
        android:textSize="18sp" />
      
    <EditText
        android:id="@+id/web"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@id/web_label"
        android:layout_below="@id/email_label"
        android:layout_margin="8dp"
        android:inputType="textUri"
        android:textSize="18sp" />
</merge>