<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android" >

   <LinearLayout
        android:id="@+id/choice_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal" >


        <ImageView
            android:id="@+id/link_icon"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:scaleType="fitCenter"
            android:layout_weight="1"
            android:src="@drawable/action_web_site_selected" />


        <ImageView
            android:id="@+id/image_icon"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:scaleType="fitCenter"
            android:layout_weight="1"
            android:src="@drawable/ic_action_picture"
            android:onClick="showPictureForm" />


        <ImageView
            android:id="@+id/contact_icon"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:scaleType="fitCenter"
            android:layout_weight="1"
            android:src="@drawable/ic_action_person"
            android:onClick="showContactForm" />


        <ImageView
            android:id="@+id/event_icon"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:scaleType="fitCenter"
            android:layout_weight="1"
            android:src="@drawable/ic_action_event"
            android:onClick="showEventForm" />

    </LinearLayout>

    <View
        android:id="@+id/top_divider"
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:layout_below="@+id/choice_bar"
        android:layout_margin="8dp"
        android:background="@color/light_gray" />

    <TextView
        android:id="@+id/header_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/top_divider"
        android:layout_margin="8dp"
        android:labelFor="@+id/header"
        android:text="@string/label_title"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/header_label"
        android:layout_alignParentRight="true"
        android:layout_margin="8dp"
        android:layout_toRightOf="@id/header_label"
        android:inputType="text"
        android:textSize="24sp" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/link_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/header_label"
        android:layout_margin="8dp"
        android:labelFor="@+id/link"
        android:text="@string/label_link"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/link"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/link_label"
        android:layout_alignParentRight="true"
        android:layout_margin="8dp"
        android:layout_toRightOf="@id/link_label"
        android:inputType="text"
        android:textSize="24sp" />
    
      <TextView
        android:id="@+id/comment_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/link_label"
        android:layout_margin="8dp"
        android:labelFor="@+id/comment"
        android:text="@string/label_comment"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/comment"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:layout_below="@id/comment_label"
        android:inputType="textMultiLine"
        android:textSize="18sp" />

</merge>