<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android" >

    <LinearLayout
        android:id="@+id/choice_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/link_icon"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:scaleType="fitCenter"
            android:layout_weight="1"
            android:src="@drawable/ic_action_web_site"
            android:onClick="showWebSiteForm" />


        <ImageView
            android:id="@+id/image_icon"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:scaleType="fitCenter"
            android:layout_weight="1"
            android:src="@drawable/ic_action_picture"
            android:onClick="showPictureForm" />


        <ImageView
            android:id="@+id/contact_icon"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:scaleType="fitCenter"
            android:layout_weight="1"
            android:src="@drawable/ic_action_person"
            android:onClick="showContactForm" />


        <ImageView
            android:id="@+id/event_icon"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:scaleType="fitCenter"
            android:layout_weight="1"
            android:src="@drawable/action_event_selected" />
    </LinearLayout>

    <View
        android:id="@+id/top_divider"
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:layout_below="@+id/choice_bar"
        android:layout_margin="8dp"
        android:background="@color/light_gray" />

    <TextView
        android:id="@+id/header_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/top_divider"
        android:layout_margin="8dp"
        android:labelFor="@+id/header"
        android:text="@string/label_title"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/header_label"
        android:layout_alignParentRight="true"
        android:layout_margin="8dp"
        android:layout_toRightOf="@id/header_label"
        android:inputType="text"
        android:textSize="24sp" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/datetime_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/header_label"
        android:layout_margin="8dp"
        android:labelFor="@+id/date"
        android:text="@string/label_datetime"
        android:textSize="24sp" />

    <LinearLayout
        android:id="@+id/date_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/datetime_label"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:inputType="date"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:inputType="time"
            android:textSize="24sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/location_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/date_container"
        android:layout_margin="8dp"
        android:labelFor="@+id/location"
        android:text="@string/label_location"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/location_label"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:inputType="textPostalAddress"
        android:textSize="18sp" />

</merge>